--- a/css/design.css
+++ b/css/design.css
@@ -25,7 +25,7 @@ p{
 	margin: 20px auto;
 	color: #69CBF0;
 	font-weight: bold;
-	text-shadow: 50px 50px 10px #097BA6;
+	text-shadow: 4px 4px 6px #097BA6;
 }
 .img_look{
 	width: 90%;
@@ -61,3 +61,19 @@ p{
  /* 新增transition属性 */  
   transition:all 2s;  
 }  
+
+.box{width:100%;padding:3%;box-sizing:border-box;overflow:hidden}
+.box .loader{width:30%;float:left;height:200px;margin-right:3%;border:1px #ccc solid;box-sizing:border-box;display:flex;align-items:center;justify-content:center}
+@-webkit-keyframes loading-1{0%{transform:scale(0);opacity:0}
+5%{opacity:1}
+100%{transform:scale(1);opacity:0}
+}
+.loading-1{width:60px;height:60px;position:relative}
+.loading-1 i{display:block;width:60px;height:60px;border-radius:50%;background-color:#333;position:absolute;left:0;top:0;opacity:0}
+.loading-1 i:nth-child(1){-webkit-animation:loading-1 1s linear 0s infinite}
+.loading-1 i:nth-child(2){-webkit-animation:loading-1 1s linear .2s infinite}
+.loading-1 i:nth-child(3){-webkit-animation:loading-1 1s linear .4s infinite}
+@-webkit-keyframes loading-2{0%{transform:rotate(0) scale(1)}
+50%{transform:rotate(180deg) scale(.6)}
+100%{transform:rotate(360deg) scale(1)}
+}
