--- a/css/design.css
+++ b/css/design.css
@@ -73,7 +73,7 @@ p{
 .loading-1 i:nth-child(1){-webkit-animation:loading-1 1s linear 0s infinite}
 .loading-1 i:nth-child(2){-webkit-animation:loading-1 1s linear .2s infinite}
 .loading-1 i:nth-child(3){-webkit-animation:loading-1 1s linear .4s infinite}
-@-webkit-keyframes loading-2{0%{transform:rotate(0) scale(1)}
+/*@-webkit-keyframes loading-2{0%{transform:rotate(0) scale(1)}
 50%{transform:rotate(180deg) scale(.6)}
 100%{transform:rotate(360deg) scale(1)}
-}
+}*/
